# provider-harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: self-test.yml
docs/: HARNESS_GOVERNANCE_CONTRACT.md  USAGE.md
examples/: budget.json  consent.json  request.json
src/provider_harness/: __init__.py  canon.py  cli.py  core.py  replay.py
src/provider_harness/adapters/: mock.py
tests/: test_harness.py
